# hue-lights

./: .gitignore  cli.py  daemon.py  hue_ble.py  pyproject.toml  service.py
api/: main.py
mobile/: App.tsx  app.json  package-lock.json  package.json
mobile/lib/: api.ts
web/: how2.md
web/src/: App.css  App.tsx  api.ts
